--- a/index.html
+++ b/index.html
@@ -1,27 +1,65 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Markdown Slideshow</title>
-    <meta name="description" content="A slideshow created with reveal.js and Markdown.">
-    <meta name="author" content="Your Name">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/theme/white.css" id="theme">
-    <link rel="stylesheet" href="css/custom.css">
-</head>
-<body>
-    <div class="reveal">
-        <div class="slides">
-            <section data-markdown="slides/01-slide.md" data-separator="^---$" data-separator-vertical="^--$" data-separator-notes="^Note:"></section>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/markdown.js"></script>
-    <script>
-        Reveal.initialize({
-            plugins: [ RevealMarkdown ]
-        });
-    </script>
-</body>
-</html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Awesome Presentation</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <style type="text/css">
+      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+      @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+      @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
+      body { font-family: 'Droid Serif'; }
+      h1, h2, h3 {
+        font-family: 'Yanone Kaffeesatz';
+        font-weight: normal;
+      }
+      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+    </style>
+  </head>
+  <body>
+    <textarea id="source">
+
+class: center, middle
+
+# Your Workflow & the GitHub Platform
+
+???
+
+Notes for the _first_ slide!
+
+---
+
+# Agenda
+
+1. Introduction
+2. Survey of tools and needs
+3. Looking for automation
+4. Creating an accessible and secure workflow
+
+---
+
+# Introduction
+
+      It's possible to embed images.
+![](https://cdn.shopify.com/s/files/1/0051/4802/products/mona-1_large.jpg?v=1511308586)
+
+---
+
+# Survey of tools and needs
+
+---
+
+# Looking for automation
+
+---
+
+# Creating an accessible and secure workflow
+
+    </textarea>
+    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
+    </script>
+    <script type="text/javascript">
+      var slideshow = remark.create();
+    </script>
+  </body>
+</html>
